# japanese_bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  dictionary.py  main.py
