[tool.poetry]
name = "japanese_bot"
version = "0.1.0"
description = ""
authors = ["Egor Semin <egorsemin@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pandas = "^1.5.1"
prettytable = "^3.5.0"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
wcwidth = "^0.2.5"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
